--- a/account/templates/account/footer/team.html
+++ b/account/templates/account/footer/team.html
@@ -89,7 +89,7 @@
                     <a href=""><i class="fa-brands fa-facebook text-3xl hover:text-black"></i></a>
                     <a href=""><i class="fa-brands fa-github text-3xl hover:text-black"></i></a>
                     <a href=""><i class="fa-solid fa-envelope text-3xl hover:text-black"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin text-3xl hover:text-black"></i></a>
+                    <a href="https://www.linkedin.com/in/ikhtiarshakib?"><i class="fa-brands fa-linkedin text-3xl hover:text-black"></i></a>
                 </div>               
             </div>
 
