--- a/account/templates/account/pass_change.html
+++ b/account/templates/account/pass_change.html
@@ -24,7 +24,7 @@
             <div class="mt-1">
                 <button type="submit" class="rounded-sm border-2 border-green-500 bg-green-500 text-white py-2 w-full">Update Password</button>
             </div>
-            <p class="mt-2">Already have an account? Please <a href="{% url 'login' %}" class="text-green-500 underline">Login</a></p>
+            {% comment %} <p class="mt-2">Already have an account? Please <a href="{% url 'account_login' %}" class="text-green-500 underline">Login</a></p> {% endcomment %}
             
         </div>
     </div>
