--- a/administration/templates/root.html
+++ b/administration/templates/root.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% include 'header.html' %}
 
-<body class="hold-transition bg-blue-900 sidebar-mini mx-10">
+<body class="hold-transition bg-[#032245] sidebar-mini ml-10">
   <div class="wrapper">
 
  {% include "navbar.html" %}
