--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -1,56 +1,105 @@
 {% load static %}
 <aside class="main-sidebar">
   <!-- sidebar: style can be found in sidebar.less -->
-  <section class="bg-[#0e0d0f]">
+  <section class="pt-12">
+
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="" class="img-circle border" alt="User Image">
+        <img class="rounded border-2" src="{% static 'images/arif.jpg'%}" alt="Userpic">
       </div>
+
       <div class="pull-left info">
         <p class="text-white ">{{ request.user.username }}</p>
-        <a class="text-white"><i class="fa fa-circle text-success"></i> Online</a>
+
+        <a class="text-white">
+          <i class="fa fa-circle text-success"></i> 
+          <span>Online</span>
+        </a>
+
       </div>
+
     </div>
+
+
+
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="mt-4 space-y-2">
       {% if request.user.username == 'admin' %}
 
-      <li><a href="{% url 'adminDashboard' %}"
-                  class="text-white block py-2 px-4 hover:bg-white font-bold">
-                  <i class='bx bxs-dashboard'></i> Dashboard</a></li>
+      <li>
+        <a href="{% url 'adminDashboard' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class='bx bxs-dashboard'></i> 
+          Dashboard
+        </a>
+      </li>
 
-      <li><a href="{% url 'viewPositions' %}"
-                    class="text-white block py-2 px-4 hover:bg-white font-bold"><i
-                          class="fa fa-tasks"></i> Positions</a></li>
+      <li>
+        <a href="{% url 'viewPositions' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-tasks"></i>
+          Positions
+        </a>
+      </li>
                           
-      <li><a href="{% url 'viewCandidates' %}"
-                            class="text-white block py-2 px-4 hover:bg-white font-bold"><i
-                                  class="fa fa-tasks"></i> Candidates</a></li>
+      <li>
+        <a href="{% url 'viewCandidates' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-tasks"></i>
+           Candidates
+        </a>
+      </li>
                                   
-      <li><a href="{% url 'adminViewVoters' %}"
-                                    class="text-white block py-2 px-4 hover:bg-white font-bold"><i
-                                          class="fa fa-tasks"></i> Voters</a></li>
+      <li>
+        <a href="{% url 'adminViewVoters' %}" class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-tasks"></i> 
+          Voters
+        </a>
+      </li>
 
       
-      <li><a href="{% url 'ballot_position' %}"  class="text-white block py-2 px-4 hover:bg-white font-bold"><i class="fa fa-file-text"></i> <span>Ballot Position</span></a></li>
-      <li><a href="#config" class="text-white block py-2 px-4 hover:bg-white font-bold" data-toggle="modal"><i class="fa fa-cog"></i> <span>Election Title</span></a></li>                                    
+      <li>
+        <a href="{% url 'ballot_position' %}"  class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-file-text"></i> 
+          <span>Ballot Position</span>
+        </a>
+      </li>
+
+
+      <li>
+        <a href="#config" class="text-white block py-2 px-4 hover:bg-white font-bold" data-toggle="modal">
+          <i class="fa fa-cog"></i> 
+          <span>Election Title</span>
+        </a>
+      </li>                                    
                                   
       {% endif %}
       <hr>
-      <li><a href="{% url 'voterDashboard' %}"
-        class="text-white block py-2 px-4 hover:bg-white font-bold"><i
-              class="fa fa-dashboard"></i>Voter Dashboard</a></li>
-      <li><a href="{% url 'show_ballot' %}"
-        class="text-white block py-2 px-4 hover:bg-white font-bold"><i
-              class="fa fa-dashboard"></i> <span>Show Ballot</span></a></li>
+      <li>
+        <a href="{% url 'voterDashboard' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-dashboard"></i>
+          <span>Voter Dashboard</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="{% url 'show_ballot' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-dashboard"></i> 
+          <span>Show Ballot</span>
+        </a>
+      </li>
               
-      <li><a href="{% url 'myprofile' %}"
-                  class="text-white block py-2 px-4 hover:bg-white font-bold"><i
-                        class="fa fa-dashboard"></i> <span>My profile</span></a></li>
-      <li><a href="{% url 'account_logout' %}"
-                  class="text-white block py-2 px-4 hover:bg-white font-bold"><i
-                        class="fa fa-power-off"></i> <span>Logout</span></a></li>
+      <li>
+        <a href="{% url 'myprofile' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-dashboard"></i> 
+            <span>My profile</span>
+          </a>
+      </li>
+
+      <li>
+        <a href="{% url 'account_logout' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-power-off"></i> 
+          <span>Logout</span>
+        </a>
+      </li>
 </ul>
   </section>
   <!-- /.sidebar -->
