--- a/administration/templates/admin/positions.html
+++ b/administration/templates/admin/positions.html
@@ -5,7 +5,7 @@
 <div class="col-xs-12">
 <div class="box">
 <div class="box-header with-border">
-  <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat"><i
+  <a href="#addnew" data-toggle="modal" class="btn btn-success btn-sm  rounded-xl"><i
           class="fa fa-plus"></i> New</a>
 </div>
 <div class="box-body">
@@ -43,12 +43,12 @@
 
 {% block modal %}
 <div class="modal fade" id="addnew">
-  <div class="modal-dialog">
+  <div class="modal-dialog ">
       <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title"><b>Add New Position</b></h4>
+            <h4 class="modal-title mx-auto text-5rem"><b>Add New Position</b></h4>
           </div>
           <div class="modal-body">
             <form class="form-horizontal" method="POST" action="{% url 'viewPositions' %}">
@@ -68,7 +68,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-primary btn-flat" name="add"><i class="fa fa-save"></i> Save</button>
+            <button type="submit" class="btn btn-primary text-green-700" name="add"><i class="fa fa-save"></i> Save</button>
           </div></form></div></div></div></div>
 
 <!-- Edit -->
