--- a/administration/templates/header.html
+++ b/administration/templates/header.html
@@ -33,6 +33,7 @@
   <!-- Tailwind CSS -->
   <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"/>
+      <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
