--- a/administration/templates/navbar.html
+++ b/administration/templates/navbar.html
@@ -2,38 +2,37 @@
 <header class="main-header">
   <!-- Logo -->
   <a href="{% url 'adminDashboard' %}">
-    <div class="image">
-      <img class="absolute h-12 w-34" style="width:150px; height:150px; margin-top:-60px; margin-left:-85px ;"  src="{% static 'images/ducsu_logo.png' %}" alt="Logo">
+    <div class="image pt-6 pb-4">
+      <img class="absolute rounded" style="width:150px; height:40px; margin-top:-6px margin-left:10px ;" src="{% static 'images/logo_t.png' %}" alt="Logo">
     </div>                
   </a>
+
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top">
     <!-- Sidebar toggle button-->
-    <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+    {% comment %} <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
       <span class="sr-only">Toggle navigation</span>
-    </a>
+    </a> {% endcomment %}
 
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="{% url 'home' %}" class="w-12 h-12 border rounded-full" alt="Userpic">
+          <a href="#" class="dropdown-toggle hover:bg-green-500" data-toggle="dropdown">
+            <img src="{% static 'images/arif.jpg' %}" class="w-12 h-12 border rounded-full" alt="Userpic">
             <span class="hidden-xs text-white">{{ request.user.username }}</span>
           </a>
           <ul class="dropdown-menu">
+
             <!-- User image -->
-            <li class="use">
-              <img src="" class="img-circle" alt="User Image">
-
-              <p> 
-                System Administrator <small>Member since Mar. 2021</small>
-              </p>
-
+            <li class=" use">
+              <img src="{% static 'images/arif.jpg' %}" class="img-circle h-24 w-24 mx-auto" alt="User Image">
+              <p class=" text-black mx-auto text-2xl"> System Administrator <small class="text-blue-900 ">Member since Mar. 2021</small></p>
             </li>
+
             <li class="user-footer">
               <div class="pull-left">
-                <a href="#profile" data-toggle="modal" class="btn btn-default btn-flat" id="admin_profile">Update</a>
+                <a href="" data-toggle="modal" class="btn btn-default btn-flat" id="admin_profile">Update</a>
               </div>
               <div class="pull-right">
                 <a href="{% url 'account_logout' %}" class="btn btn-default btn-flat">Sign out</a>
