--- a/voting/templates/voting/login.html
+++ b/voting/templates/voting/login.html
@@ -1,45 +1,66 @@
 {% extends "voting/base.html" %}
+{% load static %}
 
 {% block head_title %} DUCSU | Login{% endblock %}
 {% block content %}
 
-    <div class="login-box">
+    <div class="bg-blue-900 h-screen">
+        <div class="w-full">
+
+            <div class="flex pl-[200px] pt-[100px] gap-8">
+
+                <div class="pt-14 w-1/2">
+                    <img src="{% static 'images/login.png' %}" alt=" photo">
+                </div>
+
+
+               
      
-        <div class="login-box-body">
-            <h1 class="text-4xl block text-center font-semibold">Login</h1>
-            <form action="{% url 'account_login' %}" method="POST">
-                {% csrf_token %}
-                <div class="mt-2">
-                    <label for="username" class="block  text-2xl mb-2">Username</label>
-                    <input type="text"
-                        class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-2xl focus:border-gray-600"
-                        id="username" name="username">
+                <div class="login-box-body w-1/4 pt-44 border shadow-2xl">
+                    <h1 class="text-4xl block text-center font-semibold">Login</h1>
+                    <form action="{% url 'account_login' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="mt-2">
+                            <label for="username" class="block  text-2xl mb-2">Username</label>
+                            <input type="text"
+                                class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-2xl focus:border-gray-600"
+                                id="username" name="username">
+                        </div>
+        
+                        <div class="mt-2">
+                        <label for="password" class="block  text-2xl mb-2">Password</label>
+                        <input type="password"
+                            class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-2xl focus:border-gray-600"
+                            id="password" name="password">
+                        </div>
+        
+                        <div class="mt-2 flex justify-between items-center">
+        
+                        </div>
+
+                        <div class="pb-8">
+                            <a class="text-xl text-blue-500 " href="">Forgot Password?</a>
+                        </div>
+        
+                        <div class="row pt-8">
+                            <div class="col-xs-4">
+                                <button type="submit" class="btn btn-primary bg-blue-500 btn-flat" name="login">
+                                    <i class="fa fa-sign-in"></i> Sign In</button>
+                            </div>
+                        
+                            <div class="pull-right col-xs-4">
+                                <a  class="btn btn-primary btn-block btn-flat" href="{% url 'account_register' %}"><i class="fa fa-upload"></i> Register</a>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-
-                <div class="mt-2">
-                <label for="password" class="block  text-2xl mb-2">Password</label>
-                <input type="password"
-                    class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-2xl focus:border-gray-600"
-                    id="password" name="password">
-                </div>
-
-                <div class="mt-2 flex justify-between items-center">
-
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat" name="login"><i
-                                class="fa fa-sign-in"></i> Sign In</button>
-                    </div>
                 
-                    <div class="pull-right col-xs-4">
-                        <a  class="btn btn-primary btn-block btn-flat" href="{% url 'account_register' %}"><i class="fa fa-upload"></i> Register</a>
-                    </div>
-                </div>
-            </form>
-        </div>
+
             </div>
+
+
+        </div>
+    </div>
 
  
 {% endblock content %} 
