--- a/voting/templates/voting/register.html
+++ b/voting/templates/voting/register.html
@@ -1,60 +1,75 @@
 {% extends "voting/base.html" %}
+{% load static %}
 
 {% block head_title %} DUCSU | Register{% endblock %}
 
 {% block content %}
 
-    <div class="login-box">
-        <div class="login-box-body">
-            <h1 class="text-4xl block text-center font-semibold">Register</h1>
-    <form action="{% url 'account_register' %}" method="POST">
-                {% csrf_token %}
+    <div class="bg-blue-900 h-screen">
+        <div class="flex gap-8 mx-auto ml-24 pt-[100px]">
+            <div class=" w-1/2 pt-8">
+                <img src="{% static 'images/regi.png'%}" alt="">
 
-             
-                <div class="modal-body">
-                    <div class="mt-2">
-                        <label for="username" class="block text-2xl mb-2">Username</label>
-                        {{form.username}}
-                    </div>
-                    <div class="mt-2">
-                        <label for="first_name" class="block text-2xl mb-2">First Name</label>
-                        {{form.first_name}}
-                    </div>
-                    <div class="mt-2">
-                        <label for="last_name" class="block text-2xl mb-2">Last Name</label>
-                        {{form.last_name}}
-                    </div>
-                    <div class="mt-2">
-                        <label for="email" class="block text-2xl mb-2">Email</label>
-                        {{form.email}}
-                    </div>
-                    <div class="mt-2">
-                        <label for="password1" class="block text-2xl mb-2">Password</label>
-                        {{form.password1}}
-                    </div>
-                    <div class="mt-2">
-                        <label for="password2" class="block text-2xl mb-2">Confirm Password</label>
-                        {{form.password2}}
-                    </div>
-
-                    <div class="mt-2 flex justify-between items-center">
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <button type="submit" class="btn btn-primary btn-block btn-flat" name="login"><i
-                                    class="fa fa-sign-in"></i> Register</button>
-                        </div>
-                        <div class="pull-right col-xs-6">
-                            <a  class="btn btn-primary btn-block btn-flat" href="{% url 'account_login' %}"><i class="fa fa-upload"></i> Sign In</a>
-                        </div>
-                    </div> 
-                </div>
-        </div>
-    </form>
-        </div>
             </div>
+                <div class="login-box-body w-1/4 shadow-xl">
+                    <h1 class="text-4xl block text-center font-semibold">Register</h1>
+                    <form action="{% url 'account_register' %}" method="POST">
+                        {% csrf_token %}
+                     
+                        <div class="modal-body">
+                            <div class="mt-2">
+                                <label for="username" class="block text-2xl mb-2">Username</label>
+                                {{form.username}}
+                            </div>
+        
+                            <div class="mt-2">
+                                <label for="first_name" class="block text-2xl mb-2">First Name</label>
+                                {{form.first_name}}
+                            </div>
+        
+                            <div class="mt-2">
+                                <label for="last_name" class="block text-2xl mb-2">Last Name</label>
+                                {{form.last_name}}
+                            </div>
+        
+                            <div class="mt-2">
+                                <label for="email" class="block text-2xl mb-2">Email</label>
+                                {{form.email}}
+                            </div>
+        
+                            <div class="mt-2">
+                                <label for="password1" class="block text-2xl mb-2">Password</label>
+                                {{form.password1}}
+                            </div>
+        
+                            <div class="mt-2 ">
+                                <label for="password2" class="block text-2xl mb-2">Confirm Password</label>
+                                {{form.password2}}
+                            </div>
+        
+                            
+        
+                            <div class="row">
+        
+                                <div class="col-xs-6">
+                                    <button type="submit" class="btn btn-primary btn-block bg-blue-500 btn-flat" name="login">
+                                        <i class="fa fa-sign-in"></i> Register 
+                                    </button>
+                                </div>
+        
+                                <div class="pull-right col-xs-6">
+                                    <a  class="btn btn-primary btn-block btn-flat" href="{% url 'account_login' %}">
+                                        <i class="fa fa-upload"></i> Sign In
+                                    </a>
+                                </div>
+        
+                            </div> 
+                        </div>            
+                    </form>
+                </div>
+
+        </div>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="register" aria-hidden="true">
