--- a/account/templates/account/footer/about.html
+++ b/account/templates/account/footer/about.html
@@ -1,15 +1,35 @@
-{% extends "root.html" %}
+{% extends "base.html" %}
 
 {% block conten %}
 <div>
     <div>
         <div>
-            <h1>helo</h1>
+            <div>
+                <h1>About</h1>
+            </div>
+            <div>
+                <p>DUCSU was created by <span>Team TechTitanse SAMAR</span> Our goals at DUCSU are to:</p>
+                <ul>
+                    <li>
+                        Provide the best possible experience for both voters and election managers. Getting voters to vote is challenging 
+                        so we provide a clean and simple user interface for voters. OpaVote is fast and works great on mobile devices.
+                    </li>
+                    <li>
+                        Provide top-notch security and reliability. OpaVote encrypts voting pages with state-of-the-art encryption for 
+                        security, runs on Google servers for fast responses, and sends voting emails using Sendgrid to make sure emails land in voter inboxes.
+                    </li>
+                    <li>
+                        Maintain voter privacy. Voter emails are used ONLY for your election.
+                    </li>
+                    <li>
+                        Be cost effective! OpaVote is much less expensive than most other providers even though OpaVote provides better services.
+                    </li>
+                    <li>
+                        Promote the use of better voting techniques. OpaVote specializes in ranked voting because ranked voting provides better outcomes than check-the-box voting.
+                    </li>
+                </ul>
+            </div>
         </div>
-
-
-
-
     </div>
 </div>
 
