--- a/administration/templates/voters_home.html
+++ b/administration/templates/voters_home.html
@@ -1,8 +1,19 @@
 {% extends "root.html" %}
+{% load static %}
 
 
 {% block head_title %} DUCSU | Voter Home{% endblock %}
-
+{% comment %} {% include "navbar.html" %} {% endcomment %}
+  
+{% include "sidebar.html" %}
 {% block content %}
-<h1 class="text-center text-3xl">Voter home page</h1>
+    <div class="h-screen">
+        <div class="bg-gray-200 ">
+            <h1 class="text-center text-3xl font-bold py-2">Voter home page</h1>
+            
+        </div>
+        
+    </div>
+    
+
 {% endblock content %}
