--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,4 +1,69 @@
+{% extends "base.html" %}
+{% load static %}
 
+{% block head_title %} DUCSU | Login{% endblock %}
+{% block content %}
+
+    <div class="bg-[#032245] h-screen">
+        <div class="">
+
+            <div class="flex mx-auto pt-14 justify-center">
+
+                <div class="pt-4 w-1/2">
+                    <img src="{% static 'images/vote.png' %}" alt=" photo">
+                </div>               
+     
+                <div class="bg-white w-1.5/3  border mr-4 rounded-md p-12 text-gray-600">
+                    <h1 class="text-4xl block text-center font-semibold">Login</h1>
+                    <hr class="pt-6">
+                    <form action="{% url 'login' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="mt-2">
+                            <label for="username" class="block  text-xl mb-2">Username</label>
+                            <input type="text"
+                                class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-xl focus:border-gray-600"
+                                id="username" name="username">
+                        </div>
+        
+                        <div class="mt-2">
+                        <label for="password" class="block  text-xl mb-2">Password</label>
+                        <input type="password"
+                            class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-xl focus:border-gray-600"
+                            id="password" name="password">
+                        </div>
+        
+                        <div class="mt-2 flex justify-between items-center">
+        
+                        </div>
+
+                        <div class="pb-8">
+                            <a class="text-xl text-blue-500 " href="{% url 'change_pass' %}">Forgot Password?</a>
+                        </div>
+        
+                        <div class="pt-8 flex justify-between">
+                            <div class="">
+                                <button type="submit" class="bg-blue-700 p-2 rounded-md text-white hover:bg-blue-900" name="login">
+                                    <i class="fa fa-sign-in"></i> Sign In</button>
+                            </div>
+                        
+                            <div class="pt-2">
+                                <a  class="bg-blue-700 p-3 rounded-md text-white hover:text-white hover:bg-blue-900" href="{% url 'register' %}"><i class="fa fa-upload"></i> Register</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                
+
+            </div>
+
+
+        </div>
+    </div>
+
+ 
+{% endblock content %} 
+
+{% comment %} 
 {% extends "base.html" %}
 
 {% block head_title %} DUCSU | Login{% endblock %}
@@ -8,7 +73,7 @@
 
 <div class="login-box-body w-1/4 pt-44 border shadow-2xl">
     <h1 class="text-4xl block text-center font-semibold">Login</h1>
-    <form action="{% url 'account_login' %}" method="POST">
+    <form action="{% url 'login' %}" method="POST">
         {% csrf_token %}
         <div class="mt-2">
             <label for="username" class="block  text-2xl mb-2">Username</label>
@@ -39,46 +104,10 @@
             </div>
         
             <div class="pull-right col-xs-4">
-                <a  class="btn btn-primary btn-block btn-flat" href="{% url 'account_register' %}"><i class="fa fa-upload"></i> Register</a>
+                <a  class="btn btn-primary btn-block btn-flat" href="{% url 'register' %}"><i class="fa fa-upload"></i> Register</a>
             </div>
         </div>
     </form>
-</div>
+</div>    
 
-    {% comment %} <div class="bg-blue-900">
-        <div class="bg-red-500 flex justify-between">
-            <div>
-                <img src="https://lovepik.com/image-402451703/login-smart.html" alt="pic">
-            </div>
-            <div>
-                <form action="" method="post">
-                    {% csrf_token %}
-                    <div class="flex justify-center items-center h-screen bg-gray-300">
-                        <div class="w-1/3  p-5 shadow-lg bg-white rounded-md">
-                            <h1 class="text-3xl block text-center font-semibold">Login</h1>
-                            <hr class="mt-3">
-                            <div class="mt-2">
-                                <label for="username" class="block text-base mb-2">Username</label>
-                                <input type="text"
-                                    class="border w-full px-2 py-2 focus:outline-none focus:ring-0 text-base focus:border-gray-600"
-                                    id="username" name="username">
-                            </div>
-                            <div class="mt-2">
-                                <label for="password" class="block text-base mb-2">Password</label>
-                                <input type="password"
-                                    class="border w-full px-2 py-2 focus:outline-none focus:ring-0 text-base focus:border-gray-600"
-                                    id="password" name="password">
-                            </div>
-                            <div class="mt-2">
-                                <button type="submit" class="rounded-sm border-2 border-green-500 bg-green-500 text-white py-2 w-full">Login</button>
-                            </div>
-                            <p class="mt-2">Don't have an account? Please <a href="{% url 'register' %}" class="text-green-500 underline">Register</a></p>
-                            
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div> {% endcomment %}
-
-{% endblock content %}
+{% endblock content %} {% endcomment %}
