--- a/account/templates/account/pass_change.html
+++ b/account/templates/account/pass_change.html
@@ -1,33 +1,42 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    <div class="flex justify-center items-center h-screen bg-gray-300">
-        <div class="w-1/3  p-5 shadow-lg bg-white rounded-md">
-            <h1 class="text-3xl block text-center font-semibold">Forgot Password</h1>
-            <hr class="mt-3"> 
-
-            <div class="mt-2">          
-            <label for="new_password1">New password</label>
-            {{form.new_password1}}
-            </div>
-           
-            <div class="mt-2">
-                <label for="new_password2" class="block text-base mb-2">Confirm New Password</label>
-                {{form.new_password2}}
+    <section="update_password ">
+        <div class="flex justify-between bg-[#032245] h-screen px-24 pt-24 ">
+            <div class="w-1/2">               
+                <img src="{% static "images/login1.png"%}" alt="">                
             </div>
 
-            <div class="mt-2 flex justify-between items-center">
-
+            <div class="w-1.5/4 mr-24">
+                <form method="post">
+                    {% csrf_token %}
+                    
+                        <div class="p-6 bg-white rounded-md">
+                            <h1 class="text-3xl block text-center font-semibold">Change Password</h1>
+                            <hr class="mt-3"> 
+                
+                            <div class="mt-14">          
+                                <label for="new_password1">New password</label>
+                                {{form.new_password1}}
+                            </div>
+                           
+                            <div class="mt-2">
+                                <label for="new_password2" class="block text-base mb-2">Confirm New Password</label>
+                                {{form.new_password2}}
+                            </div>
+                
+                            <div class="mt-1 pt-12 pb-6">
+                                <button type="submit" class="rounded-sm  bg-blue-700 text-white py-2 w-full hover:bg-blue-900">Update Password</button>
+                            </div>
+                            <p class="mt-2">Already have an account? Please <a href="{% url 'login' %}" class="text-green-500 underline hover:text-pink-500">Login</a></p> 
+                            
+                        </div>                    
+                </form>
+                
             </div>
-            <div class="mt-1">
-                <button type="submit" class="rounded-sm border-2 border-green-500 bg-green-500 text-white py-2 w-full">Update Password</button>
-            </div>
-            {% comment %} <p class="mt-2">Already have an account? Please <a href="{% url 'account_login' %}" class="text-green-500 underline">Login</a></p> {% endcomment %}
-            
         </div>
-    </div>
-</form>
+    </section=>
+
 
 {% endblock content %}
