--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -1,34 +1,15 @@
 {% load static %}
 <aside class="main-sidebar">
   <!-- sidebar: style can be found in sidebar.less -->
-<<<<<<< HEAD
-  <section class="pt-12">
-
+  <section class="bg-[#032245] pt-14">
     <!-- Sidebar user panel -->
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img class="rounded border-2" src="{% static 'images/arif.jpg'%}" alt="Userpic">
-      </div>
-
-      <div class="pull-left info">
-        <p class="text-white ">{{ request.user.username }}</p>
-
-        <a class="text-white">
-          <i class="fa fa-circle text-success"></i> 
-          <span>Online</span>
-        </a>
-
-=======
-  <section class="bg-[#081d73]">
-    <!-- Sidebar user panel -->
-    <div class="user-panel">
+    {% comment %} <div class="user-panel">
       <div class="pull-left info">
         <p class="text-white text-3xl ">{{ request.user.username }}</p>
         <a class="text-white"><i class="fa fa-circle text-success"></i> Online</a>
->>>>>>> e5ee3a32a46873349e863f72ed63384e3d4715db
       </div>
 
-    </div>
+    </div> {% endcomment %}
 
 
 
@@ -37,7 +18,7 @@
       {% if request.user.username == 'admin' %}
 
       <li>
-        <a href="{% url 'adminDashboard' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+        <a href="{% url 'adminDashboard' %}"class="text-white block py-2 px-4 hover:bg-white font-bold pl-4">
           <i class='bx bxs-dashboard'></i> 
           Dashboard
         </a>
@@ -109,6 +90,14 @@
           <span>Logout</span>
         </a>
       </li>
+
+      <li>
+        <a href="{% url 'change_pass' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+          <i class="fa fa-power-off"></i> 
+          <span>pass_change</span>
+        </a>
+      </li>
+
 </ul>
   </section>
   <!-- /.sidebar -->
