--- a/voting/templates/voting/voter/ballot.html
+++ b/voting/templates/voting/voter/ballot.html
@@ -17,13 +17,13 @@ aria-hidden="true">&times;</button>
 
 <form method="POST" id="ballotForm" action="{% url 'submit_ballot' %}">
   {% csrf_token %}
-  <div class="" style="border:2px solid ; text-align:cente;">
+  <div class="" style=" solid ; text-align:cente;">
     {{ ballot|safe }}
   </div>
   <div class="text-center">
-    <button type="button" class="btn btn-success btn-flat" id="preview"><i
+    <button type="button" class="btn btn-success btn-flat bg-green-500" id="preview"><i
             class="fa fa-file-text"></i> Preview</button>
-    <button type="submit" class="btn btn-primary btn-flat" name="submit_vote"><i
+    <button type="submit" class="btn btn-primary bg-blue-500 btn-flat" name="submit_vote"><i
             class="fa fa-check-square-o"></i> Submit</button>
 </div>
 </form>
@@ -36,7 +36,7 @@ aria-hidden="true">&times;</button>
 <script>
   $(function() {
       $('.content').iCheck({
-          checkboxClass: 'icheckbox_flat-green',
+          checkboxClass: 'icheckbox_flat-green bg-green-500',
           radioClass: 'iradio_flat-green'
       });
 
