--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -6,9 +6,9 @@
 {% block content %}
 
     <div class="bg-[#032245] h-screen">
-        <div class="flex mx-auto pt-6 justify-around px-24 gap-8">
-            <div class=" w-1/2 pt-8">
-                <img src="{% static 'images/regi.png'%}" alt="">
+        <div class="flex mx-auto pt-6 justify-around px-24">
+            <div class=" w-1/2 pt-14">
+                <img src="{% static 'images/regi.png'%}" alt="pic">
 
             </div>
                 <div class="login-box-body w-2/5 shadow-xl rounded-md">
