--- a/administration/templates/admin/election.html
+++ b/administration/templates/admin/election.html
@@ -4,9 +4,9 @@
 {% block content %}
 
     <div>
-        <div class="flex justify-between bg-[#032245] h-screen px-24 pt-8">
+        <div class="flex justify-between bg-[#032245] h-screen px-24 pt-8 gap-8">
             <div class="w-1/2">               
-                <img class="w-full" src="{% static "images/poll.png"%}" alt="">                
+                <img class="w-full" src="{% static "images/election1.png"%}" alt="">                
             </div>
 
             <div class="w-1/2 mr-24">
