--- a/account/templates/account/footer/team.html
+++ b/account/templates/account/footer/team.html
@@ -45,10 +45,10 @@
                 </div>
                 <div class="flex gap-8 pt-4 justify-center">
 
-                    <a href="https://www.facebook.com/ariful462"><i class="fa-brands fa-facebook text-3xl hover:text-black"></i></a>
-                    <a href="https://github.com/Arif-462"><i class="fa-brands fa-github text-3xl hover:text-black"></i></a>
-                    <a href="mailto:ariful10462@gmail.com?"><i class="fa-solid fa-envelope text-3xl hover:text-black"></i></a>
-                    <a href="https://www.linkedin.com/in/ariful462/"><i class="fa-brands fa-linkedin text-3xl hover:text-black"></i></a>
+                    <a href="https://www.facebook.com/ariful462" target="_blank"><i class="fa-brands fa-facebook text-3xl hover:text-black"></i></a>
+                    <a href="https://github.com/Arif-462" target="_blank"><i class="fa-brands fa-github text-3xl hover:text-black"></i></a>
+                    <a href="mailto:ariful10462@gmail.com?" target="_blank"><i class="fa-solid fa-envelope text-3xl hover:text-black"></i></a>
+                    <a href="https://www.linkedin.com/in/ariful462/" target="_blank"><i class="fa-brands fa-linkedin text-3xl hover:text-black"></i></a>
                 </div>               
             </div>
 
