--- a/templates/footer1.html
+++ b/templates/footer1.html
@@ -13,7 +13,7 @@
 
             <a href="{% url 'about' %}" class="hover:text-red-700">About</a>
             <a href="{% url 'profile' %}" class="hover:text-red-700">Team</a>
-            <a href="https://calendar.google.com/calendar/" class="hover:text-red-700">Event Calendar</a>
+            <a href="https://calendar.google.com/calendar/" class="hover:text-red-700" target="_blank">Event Calendar</a>
             <a href="" class="hover:text-red-700">Requirements</a>
            
           </div>              
@@ -41,19 +41,19 @@
         </div>
 
         <div class="flex flex-col gap-4 pt-4">
-          <a href="mailto:ariful10462@gmail.com" class="hover:text-red-700">
+          <a href="mailto:ariful10462@gmail.com" class="hover:text-red-700" target="_blank">
             <i class="fa-solid fa-envelope"></i>
             <span>Email</span>
           </a>
-          <a href="tel:+880123456789" class="hover:text-red-700">
+          <a href="tel:+880123456789" class="hover:text-red-700" target="_blank">
             <i class="fa-solid fa-phone"></i>
             <span>Contact </span>
           </a>
-          <a href="https://www.facebook.com" class="hover:text-red-700">
+          <a href="https://www.facebook.com" class="hover:text-red-700" target="_blank">
             <i class="fa-brands fa-facebook-f" ></i>
             <span>Facebook</span>
           </a>
-          <a class="hover:text-red-700" href="https://www.youtube.com">
+          <a class="hover:text-red-700" href="https://www.youtube.com" target="_blank">
             <i class="fa-brands fa-youtube"></i>
             <span >Youtube</span>
           </a>
