--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -18,7 +18,7 @@
       {% if request.user.username == 'admin' %}
 
       <li>
-        <a href="{% url 'adminDashboard' %}"class="text-white block py-2 px-4 hover:bg-white font-bold pl-4">
+        <a href="{% url 'userDashboard' %}"class="text-white block py-2 px-4 hover:bg-white font-bold pl-4">
           <i class='bx bxs-dashboard'></i> 
           Dashboard
         </a>
@@ -78,7 +78,7 @@
       </li>
               
       <li>
-        <a href="{% url 'myprofile' %}"class="text-white block py-2 px-4 hover:bg-white font-bold">
+        <a href="" class="text-white block py-2 px-4 hover:bg-white font-bold">
           <i class="fa fa-dashboard"></i> 
             <span>My profile</span>
           </a>
