--- a/administration/templates/admin/positions.html
+++ b/administration/templates/admin/positions.html
@@ -72,9 +72,9 @@
 
 
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-primary text-green-700" name="add"><i class="fa fa-save"></i> Save</button>
+          <div class="modal-footer flex justify-between">
+            <button type="button" class="text-white bg-blue-700 border-md hover:bg-blue-900" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
+            <button type="submit" class="" name="add"><i class="fa fa-save"></i> Save</button>
           </div></form></div></div></div></div>
 
 <!-- Edit -->
