--- a/administration/templates/admin/candidates.html
+++ b/administration/templates/admin/candidates.html
@@ -174,7 +174,7 @@
   function getRow(id) {
     $.ajax({
       type: 'GET',
-      url: '{% url "viewCandidate" %}',
+      url: '{% url "viewCandidates" %}',
       data: {
         id: id
       },
