--- a/administration/templates/admin/admin_home.html
+++ b/administration/templates/admin/admin_home.html
@@ -22,7 +22,7 @@
             <div class="icon pt-6">
               <i class="fa fa-tasks"></i>
             </div>
-            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="{% url 'viewPositions' %}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
