--- a/administration/templates/candidate.html
+++ b/administration/templates/candidate.html
@@ -6,6 +6,7 @@
 <div class="col-lg-12 mx-auto shadow text-black">
     <div class="bg-green-500 text-white p-3 text-center rounded-t-lg">
         <h2 class="text-2xl font-bold">Candidate</h2>
+        <h2>{{election.id}}</h2>
     </div>
     <div class="p-4 overflow-x-auto">
         {% if candidates %}
