--- a/administration/templates/admin/print.html
+++ b/administration/templates/admin/print.html
@@ -12,19 +12,19 @@
   </div>
 
   <div class="text-center">
-    <p class="">Result</p>
+    <h2><u style="font-weight: bold;">{{ elections }} Result</u></h2>
   </div>
   <table id="example1" class="">
     {% for key, value in positions.items %} {# Loop 1 #}
     <table id="example1" class="text-center table table-bordered text-white">
       <tr>
-        <th style="background-color: aqua;" class="text-center bg-blue-300 text-white" colspan="3">{{ key }} | Maximum
+        <th class="text-center" colspan="3">{{ key }} | Maximum
           Number Of Winners : {{ value.max_vote }}</th>
       </tr>
       <tr>
         <th class="text-center" style="width: 5%;">SN</th>
         <th class="text-center" style="width: 60%;">Candidate Name </th>
-        <th class="text-center" style="width: 35%;">Total Votes Recorded</th>
+        <th class="text-center" style="width: 30%;">Total Votes Recorded</th>
       </tr>
       {% for data in value.candidate_data %} {# Loop 2 #}
       <tr>
