--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -6,8 +6,7 @@
     <div class="user-panel">
 
       <div class="pull-left info">
-        <p class="text-green text-3xl ">{{ request.user.voter }}</p>
-        {% comment %} <a class="text-white"><i class="fa fa-circle text-success"></i> Online</a> {% endcomment %}
+      
       </div>
 
     </div>
@@ -17,49 +16,43 @@
       {% if request.user.voter.account_type  == 'Admin' %}
 
       <li><a href="{% url 'userDashboard' %}"
-                  class="py-2 px-4 text-white block hover:bg-white font-bold">
-                  <i class='bx bxs-dashboard'></i> Dashboard</a></li>
+                  class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold">
+                  <i class="fas fa-chalkboard-teacher fa-lg"></i> Dashboard</a></li>
 
       <li><a href="{% url 'viewElections' %}"
-                    class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-                          class="fa fa-tasks"></i> Elections</a></li>
+                    class="py-2 px-4 text-2xl  text-white block hover:bg-white font-bold"><i
+                          class="fas fa-archive"></i> Elections</a></li>
     {% if request.user.voter.election  %}
       <li><a href="{% url 'viewPositions' %}"
-                    class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-                          class="fa fa-tasks"></i> Positions</a></li>
-    
+                    class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-list-ul fa-lg"></i></i> Positions</a></li>
+
    {% endif %}                      
       <li><a href="{% url 'viewCandidates' %}"
-                            class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-                                  class="fa fa-tasks"></i> Candidates</a></li>
+                            class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-users fa-lg"></i></i> Candidates</a></li>
                                   
       <li><a href="{% url 'adminViewVoters' %}"
-                                    class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-                                          class="fa fa-tasks"></i> Voters</a></li>
+                                    class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-id-card fa-lg"></i></i> Voters</a></li>
 
-      
-      <li><a href="{% url 'ballot_position' %}"  class="py-2 px-4 text-white block hover:bg-white font-bold"><i class="fa fa-file-text"></i> <span>Ballot Position</span></a></li>
-      <li><a href="#config" class="py-2 px-4 text-white block hover:bg-white font-bold" data-toggle="modal"><i class="fa fa-cog"></i> <span>Election Title</span></a></li>                                    
+      <li><a href="{% url 'ballot_position' %}"  class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-file-alt fa-lg"></i> <span>Ballot Position</span></a></li>
+      <li><a href="#config" class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold" data-toggle="modal"><i class="fas fa-cog fa-lg"></i> <span>Election Title</span></a></li>                                    
                                   
       {% endif %}
       <hr>
       <li><a href="{% url 'voterDashboard' %}"
-        class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-              class="fa fa-dashboard"></i>Voter Dashboard</a></li>
+        class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-vote-yea fa-lg"></i></i>Voter Dashboard</a></li>
+
       <li><a href="{% url 'show_ballot' %}"
-        class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-              class="fa fa-dashboard"></i> <span>Show Ballot</span></a></li>
+        class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-file-alt fa-lg"></i> <span>Show Ballot</span></a></li>
               
       <li><a href="{% url 'userDashboard' %}"
-                  class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-                        class="fa fa-dashboard"></i> <span>My profile</span></a></li>
+                  class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-user fa-lg"></i></i> <span>My profile</span></a></li>
+
       <li><a href="{% url 'account_logout' %}"
-                  class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-                        class="fa fa-power-off"></i> <span>Logout</span></a></li>
+                  class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold"><i class="fas fa-sign-out-alt fa-lg"></i></i> <span>Logout</span></a></li>
 
       <li><a href="{% url 'change_pass' %}"
-        class="py-2 px-4 text-white block hover:bg-white font-bold"><i
-              class="fa fa-power-off"></i> <span>Change Password</span></a></li>
+        class="py-2 px-4 text-2xl text-white block hover:bg-white font-bold">
+        <i class="fas fa-unlock fa-lg"></i><span>Change Password</span></a></li>
 </ul>
   </section>
   <!-- /.sidebar -->
