--- a/templates/header.html
+++ b/templates/header.html
@@ -7,18 +7,18 @@
             <div>
                 <a href="{% url 'home' %}"><img class="absolute h-10 w-30" src="{% static 'images/logo_t.png'%}" alt="Logo"></a>                
             </div>
-            <div class="text-white">
+            <div>
                 <div class="flex gap-[20px] pt-2 text-white font-bold">
 
                     {% if request.user.is_authenticated %}
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:px-2 px-2" href="">Welcome, {{ request.user.username }}</a>
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:px-2 px-2" href="{% url 'account_logout' %}">Logout</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'home' %}">Home</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'userDashboard' %}">Welcome, {{ request.user.username }}</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'account_logout' %}">Logout</a>
                     {% else %}                      
 
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:px-2 px-2" href="{% url 'login' %}">Login</a>
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:px-2 px-2" href="{% url 'register' %}">Register</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'home' %}">Home</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'login' %}">Login</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'register' %}">Register</a>
                     {% endif %}
                 </div>
             </div>
