--- a/templates/home.html
+++ b/templates/home.html
@@ -5,35 +5,6 @@
 {% block content %}
 <div class="h-screen bg-[#032245]">
     <div class="container px-24 mx-auto ">
-       
-
-        {% comment %} <div class="flex justify-between pt-8">
-            <div>
-                <img class="absolute h-10 w-30" src="static/images/logo_t.png" alt="Logo">
-            </div>
-            <div class="text-white">
-                <div class="flex gap-[20px] pt-4 text-white font-bold">
-
-                    {% if request.user.is_authenticated %}
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'about' %}">About</a>
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2"
-                        href="{% url 'userDashboard' %}">Welcome, {{ request.user.username }}</a>
-                    {% else %}
-
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'about' %}">About</a>
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2"
-                        href="{% url 'account_login' %}">Login</a>
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2"
-                        href="{% url 'account_register' %}">Register</a>
-
-                    {% endif %}
-                </div>
-            </div>
-        </div> {% endcomment %}
-        
-
         <!--home page section-->
         <div class="flex gap-[100px]">
             <div class="text-sky-200 w-1/3 flex flex-col gap-10 pt-[100px]">
@@ -47,7 +18,7 @@
                     </p>
                 </div>
                 <div class="pt-5">
-                    <a href="{% url 'userDashboard' %}" class="border-2 rounded-3xl p-2 text-md hover:border-pink-500 hover:text-white">Get Started</a>
+                    <a href="{% url 'userDashboard' %}" class="border-2 rounded-3xl p-2 text-white hover:border-pink-600 hover:text-white">Get Started</a>
                 </div>
                 <script src="//code.tidio.co/vd36pjv83zicyt5nqkdcouo4bnt5xnde.js" async></script>
             </div>
